--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,8 @@
   </head>
   <body>
     <header>
-      <nav>
+      (Name of Site TBD)
+      <nav class="navBar">
         <ul>
           <% if (currentUser) { %>
             <li><a href="/auth/logout">Logout</a></li>
