--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,3 +1,3 @@
-<h2>Profile Page</h2>
+<h2>My Dogs</h2>
 
-<h3>Welcome to your PROFILE <%= currentUser.name %></h3>
+<h3>Welcome to your Dogs page <%= currentUser.name %></h3>
