--- a/views/dogs/info.ejs
+++ b/views/dogs/info.ejs
@@ -1,2 +1,2 @@
-<img src='<%= dogs.url %>' alt="Image of <%= dogs.name %>">
+<img src='<%= dogs[0].url %>' alt="Image of <%= dogs.name %>">
 <h2>This is a <%= dogs.name %></h2>
