--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,26 @@ nav ul li {
   display: inline-block;
   margin-right: .3em;
 }
+
+body {
+  background-color: rgb(91, 159, 248);
+}
+
+.homepage {
+  color: white;
+}
+
+.welcome {
+  color:thistle;
+  text-align: center;
+}
+
+.dogHouse {
+  border: 1px solid black;
+  padding: 12px;
+  margin: 3% 7% 3% 3%;
+  color:rgb(248, 216, 252);
+}
 /* .dogNavs {
   text-align: left;
   text-decoration: none;
