really don't know what i did but something broke and now i have it working kinda again

--- a/views/dogs/info.ejs
+++ b/views/dogs/info.ejs
@@ -1,2 +1,2 @@
-<img src='<%= dogs[0].url %>' alt="Image of <%= dogs.name %>">
-<h2>This is a <%= dogs.name %></h2>
+<img default-src='<%= dogs[0].url %>' src='<%= dogs[0].url %>' alt="Image of <%= dogs.name %>">
+<h2>This is a <%= dogs[0].name %></h2>
