--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,16 +23,11 @@ body {
   margin: 3% 7% 3% 3%;
   color:rgb(248, 216, 252);
 }
-/* .dogNavs {
-  text-align: left;
-  text-decoration: none;
-  display: inline-block;
-} */
-/* .navBar {
-  text-align: right;
-  text-decoration: none;
-  display: inline-block;
-} */
+
+.descriptors {
+  text-align: center;
+  color:rgb(148, 27, 51);
+}
 
 h1 {
   color: chartreuse;
