--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,12 @@
 
 <h2 class="welcome"> Welcome, <%= currentUser ? currentUser.name : 'Log in to' %> select dogs to add to your My Dogs list, or click to learn more about the dogs!</h2>
 <br>
-<h3>Search for a dog breed</h3><input type="text" name="searchbar">
-<input type="submit" value="Search">
+<h3>Search for a dog breed</h3>
+<form method="POST" action="../info/:id">
+    <label for="dogName">Search dog breed</label>
+    <input id="dogName" type="text" name="breed">
+    <input type="submit">
+</form>
 
 <ul>
 <div class="well">
