--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,3 +1,4 @@
 <h2>My Dogs</h2>
 
-<h3>Welcome to your Dogs page <%= currentUser.name %></h3>
+<h3>Welcome to your My Dogs page, <%= currentUser.name %>!</h3>
+
