--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <h2 class="welcome"> Welcome, <%= currentUser ? currentUser.name : 'Log in to' %> select dogs to add to your My Dogs list, or click to learn more about the dogs!</h2>
 <br>
 <h3>Search for a dog breed</h3>
-<form method="POST" action="../info/:id">
+<form method="POST" action="../info/<%= dogs.id %>">
     <label for="dogName">Search dog breed</label>
     <input id="dogName" type="text" name="breed">
     <input type="submit">
@@ -15,7 +15,9 @@
 <li class="dogHouse"> <%= dog.name %></li>
 <a href="../info/<%= dog.id %>">Click to Learn More!</a>
 <form method="POST" action="/mydogs">
+    <input type='hidden' name='name' value='<%= dog.name %>'>
     <button type="submit">Add to My Dogs</button>
+
 </form>
 <% }) %>
 </div>
