--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,14 @@ body {
   background-color: rgb(91, 159, 248);
 }
 
+.doggiePic {
+  display: block;
+  max-width: 40%;
+  max-height: 20%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .homepage {
   color: white;
 }
