--- a/views/dogs/info.ejs
+++ b/views/dogs/info.ejs
@@ -1,4 +1,4 @@
-<img default-src='<%= dog.url %>' src='<%= dog.url %>' alt="Image of <%= dog.breeds[0].name %> found at <%= dog.url %>">
+<img class="doggiePic" default-src='<%= dog.url %>' src='<%= dog.url %>' alt="Image of <%= dog.breeds[0].name %> found at <%= dog.url %>">
 <div class="descriptors">
     <h4>This is the <%= dog.breeds[0].name %></h4>
     <h4>It is typically bred for: <%= dog.breeds[0].bred_for %></h4>
