--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,8 +16,11 @@
 <a href="../info/<%= dog.id %>">Click to Learn More!</a>
 <form method="POST" action="/mydogs">
     <input type='hidden' name='name' value='<%= dog.name %>'>
+    <input type='hidden' name='bredfor' value='<%= dog.bred_for %>'>
+    <input type='hidden' name='lifespan' value='<%= dog.life_span %>'>
+    <input type='hidden' name='temperament' value='<%= dog.temperament %>'>
+    <input type='hidden' name='url' value='<%= dog.image.url %>'>
     <button type="submit">Add to My Dogs</button>
-
 </form>
 <% }) %>
 </div>
