--- a/views/mydogs.ejs
+++ b/views/mydogs.ejs
@@ -2,3 +2,6 @@
 
 <h3>Welcome to your My Dogs page, <%= currentUser.name %>!</h3>
 
+<% dogs.forEach(dog => { %>
+<li class="dogHouse"><%= dog.name %></li> 
+<% }) %>
