--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,26 +3,17 @@
 <h2 class="welcome"> Welcome, <%= currentUser ? currentUser.name : 'Log in to' %> select dogs to add to your My Dogs list, or click to learn more about the dogs!</h2>
 <br>
 <h3>Search for a dog breed</h3>
-<form method="POST" action="../info/<%= dogs.id %>">
+<form method="GET" action="/search">
     <label for="dogName">Search dog breed</label>
-    <input id="dogName" type="text" name="breed">
+    <!-- <input id="dogName" type="text" name="breed"> -->
+    <input type="search" name="name">
     <input type="submit">
 </form>
-
 <ul>
 <div class="well">
 <% dogs.forEach(dog => { %>
 <li class="dogHouse"><%= dog.name %></li>
 <a href="../info/<%= dog.id %>">Click to Learn More!</a>
-<form method="POST" action="/mydogs">
-    <input type='hidden' name='name' value='<%= dog.name %>'>
-    <input type='hidden' name='bredfor' value='<%= dog.bred_for %>'>
-    <input type='hidden' name='lifespan' value='<%= dog.life_span %>'>
-    <input type='hidden' name='temperament' value='<%= dog.temperament %>'>
-    <input type='hidden' name='url' value='<%= dog.image.url %>'>
-    <input type='hidden' name='dogId' value='<%= dog.id %>'>
-    <button type="submit">Add to My Dogs</button>
-</form>
 <% }) %>
 </div>
 </ul>
