added some styling adding more later

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      (Name of Site TBD)
+      <h3 class="pageName">DogSpot</h3>
       <nav>
         <ul class="dogNavs">
           <li><a href="/">Find Doggos</a></li>
@@ -27,7 +27,7 @@
         </ul>
       </nav>
     </header>
-    <h1>DOGGOS!!!!</h1>
+    <h1 class="dogLove">Who doesn't love dogs? <br>Find your perfect dog today!</h1>
     <%- include ('./partials/alerts.ejs') %>
     <%- body %>
   </body>
