--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,35 @@
+.pageName {
+  font-size: 30px;
+  font-family:'Courier New', Courier, monospace;
+  text-decoration: underline;
+}
+
 nav ul li {
   text-decoration: none;
   display: inline-block;
   margin-right: .3em;
 }
 
+.dogNavs {
+  text-align: left;
+  padding: 0px;
+  margin-right: 60%;
+  margin-left: 5%;
+}
+
+.navBar {
+  text-align: center;
+  margin-left: 80%;
+}
+
+.dogLove {
+  color: rgb(59, 116, 59);
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  max-height: 10%;
+  text-align: center;
+}
 body {
-  background-color: rgb(91, 159, 248);
+  background-color: rgb(134, 170, 218);
 }
 
 .doggiePic {
@@ -37,9 +61,6 @@ body {
   color:rgb(148, 27, 51);
 }
 
-h1 {
-  color: chartreuse;
-}
 
 .alert-container {
   width: 50vw;
