--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<h2 class="homepage">Homepage</h2>
+<h2 class="homepage">Find Your Dogs!</h2>
 
 <h2 class="welcome"> Welcome, <%= currentUser ? currentUser.name : 'Log in to' %> select dogs to add to your My Dogs list, or click to learn more about the dogs!</h2>
 <br>
