--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,6 +6,8 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'none'; connect-src 'self';font-src 'self'; img-src 'self' data: https:; style-src 'self' ; script-src 'self'">
     <title>DogSpot</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet">
     <script src="./js/main.js" defer></script>
   </head>
   <body>
