--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,7 +7,7 @@
     <title>DogSpot</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&family=Potta+One&display=swap" rel="stylesheet">
     <script src="./js/main.js" defer></script>
   </head>
   <body>
@@ -30,7 +30,6 @@
         </ul>
       </nav>
     </header>
-    <!-- <h1 class="dogLove">Who doesn't love dogs? <br>Find your perfect dog today!</h1> -->
     <%- include ('./partials/alerts.ejs') %>
     <div class="content">
       <%- body %>
