--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <h3 class="searchBreedWords">Search for a dog breed here:</h3>
     <form class="searchBar" method="GET" action="/search">
         <input class="searchBox" type="search" name="name">
-        <input type="submit">
+        <input class="fetchBtn" type="submit" value="Fetch!">
     </form>
     <ul>
         <div class="well">
