--- a/views/mydogs.ejs
+++ b/views/mydogs.ejs
@@ -1,10 +1,11 @@
-<h2>My Dogs</h2>
+<h2 class="myDogsHead">My Dogs</h2>
 
-<h3>Welcome to your My Dogs page, <%= currentUser ? currentUser.name : 'Hi'%>!</h3>
+<h3 class="myDogsPage">Welcome to your "My Dogs" page, <%= currentUser ? currentUser.name : 'Hi'%>!</h3>
 
 <br>
 
 <div class="contentHolder">
+    <div class="well">
     <% dog.forEach(dog => { %>
         <li class="dogHouse"><%= dog.name %></li> 
         <a href="../info/<%= dog.dogId %>" class="dogLinks">Click to Learn More!</a>
@@ -12,4 +13,5 @@
             <input class ="removeMyDogs" type="submit" value="Remove from My Dogs">
         </form>
         <% }) %>
+    </div>
 </div>
