--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,14 @@
 #myHeader {
   padding: 3px 13px;
-  background: rgba(146, 135, 135, 0.808);
-  color: #f1f1f1;
+  background: rgb(241, 205, 86);
+  color: #000000;
   width: 100%;
   display: flex;
   flex-direction: row;
   align-content: space-between;
   align-items: flex-end;
+  box-shadow: 6px 9px 9px 2px #00000075;
+  height: 70px;
   /* align-items: center; */
 }
 
@@ -64,89 +66,154 @@ body {
   border: 1px solid black;
   display: block;
   max-width: 40%;
-  max-height: 20%;
+  max-height: 300px;
   margin-right: auto;
   margin-left: auto;
 }
 
 .homepage {
-  color: white;
+  color: rgb(143, 60, 12);
   text-align: center;
   text-decoration: underline;
-  font-size: 3em;
+  font-size: 2.3em;
+  font-family: 'Potta One', cursive;
+  background-color: rgb(255, 215, 154);
+  box-shadow: 6px 9px 9px 2px #272626;
+}
+
+.myDogsPage {
+  color: rgb(0, 0, 0);
+  text-align: center;
+  font-size: 2.3em;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgb(255, 211, 144);
+  box-shadow: 6px 9px 9px 2px #272626;
 }
 
 .welcome {
-  border: 1px dotted black;
-  background-color: rgb(207, 205, 205);
+  border: 1px solid black;
+  background-color: rgb(255, 215, 154);
   color: black;
   text-align: center;
   font-family: 'Hachi Maru Pop', cursive;
+  box-shadow: 6px 9px 9px 2px #272626;
+}
+
+.myDogsHead {
+  color: rgb(0, 0, 0);
+  text-align: center;
+  text-decoration: underline;
+  font-size: 2.3em;
+  font-family: 'Chalkduster', fantasy;
+  border: 1px solid black;
+  background-color:rgba(221, 153, 63, 0.966);
+  max-width: 250px;
+  margin-left: auto;
+  margin-right: auto;
+  min-width: 175px;
+  box-shadow: 6px 9px 9px 2px #353434;
+}
+
+
+.searchBar {
+  display: flex;
+  justify-content: center;
+  border: 2px solid black;
 }
 
 .searchBreedWords{
   text-align: center;
-}
-
-.searchBar {
+  font-family: 'Comic Sans MS', 'Comic Sans', cursive;
+  /* margin-left: 10%; */
   display: flex;
   justify-content: center;
 }
 
 .searchBox{
-  margin: 0px 5px;
+  /* margin: 0px 5px;
+  margin-left: 10%; */
+  display: flex;
+  justify-content: center;
+  border: 2px solid black;
+}
+
+.fetchBtn{
+  font-weight: bold;
+  border: 2px solid black;
+  background-color:lemonchiffon;
 }
 
 .contentHolder {
   border: 2px solid black;
-  background-color:rgb(247, 247, 247);
+  background-color:rgb(248, 243, 175);
   margin: 0% 10% 10% 5%;
   padding: 2% 7% 2% 7%;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: 6px 9px 9px 2px #4b4a4a;
 }
 
 .dogHouse {
-  font-size:x-large;
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size:2em;
+  font-family:'Trattatello', fantasy;
   text-align: center;
   border: 1px solid black;
   background-color: rgb(255, 255, 255);
   padding: 12px;
-  margin: 6% 25% 0% 25%;
+  margin: 8% 0% 0% 0%;
   color:rgb(47, 6, 53);
   list-style-type: none;
   display: flex;
-  justify-content: center;;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 6px 9px 9px 2px #272626;
+}
+
+.well {
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content: center;
 }
 
 .dogLinks {
-  margin-left: 40%;
-  margin-right: 40%;
+  /* margin-left: 40%;
+  margin-right: 40%; */
   text-align: center;
   border: 1px solid black;
-  background-color: gray;
+  background-color: rgba(224, 105, 36, 0.637);
   text-decoration: none;
   color: white;
+  font-weight: bold; 
   display: flex;
   justify-content: center;
+  padding: 7px;
+  box-shadow: 6px 9px 9px 2px #272626;
 }
 
 .addMyDog {
-  margin-left: 45%;
-  margin-right: 45%;
-  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 14px;
   text-align: center;
   border: 1px solid black;
-  background-color: rgb(255, 255, 255);
+  background-color: rgba(224, 105, 36, 0.637);
   text-decoration: none;
-  color: rgb(0, 0, 0);
+  color: white;
+  font-weight: bold;
+  font-size: 1em;
   display: flex;
   justify-content: center;
+  padding: 7px;
+  box-shadow: 6px 9px 9px 2px #272626;
 }
 
 .removeMyDogs {
-  margin-left: 33.5%;
-  margin-right: 40%;
+  /* margin-left: 37.5%;
+  margin-right: 36.5%; */
+  margin-top: 5%;
   text-align: center;
   border: 1px solid black;
   text-decoration: none;
@@ -155,7 +222,9 @@ body {
   display: flex;
   justify-content: center;
   font-family:monospace;
+  box-shadow: 6px 9px 9px 2px #272626;
 }
+
 
 .descriptors {
   text-align: center;
@@ -187,4 +256,29 @@ body {
 .success {
   border: 3px solid forestgreen;
   background-color: rgb(21, 85, 21);
+}
+
+.socialsImg {
+  height: 100px;
+  width: 100px;
+  background-color: white;
+}
+
+.footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(250, 177, 41);
+  color: white;
+  text-align: center;
+  display: flex;
+}
+
+.socialsImg {
+  margin-left: 5px;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  align-items: flex-end;
 }
