--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; connect-src 'self';font-src 'self'; img-src 'self' data: https:; style-src 'self' ; script-src 'self'">
+    <meta http-equiv="Content-Security-Policy: default-src 'self';font-src fonts.gstatic.com;style-src 'self' fonts.googleapis.com">
     <title>DogSpot</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -34,5 +34,9 @@
     <div class="content">
       <%- body %>
     </div>  
+    <div class="footer">
+      <a class="imageLinks" href="https://www.linkedin.com/in/austin-tipograph-522209137/"><img class="socialsImg" src='/css/linkedin.png' alt="Linkedin"></a>
+      <a class="imageLinks" href="https://github.com/austintip"><img class="socialsImg" src='/css/github.png' alt="GitHub"></a>
+    </div>
   </body>
 </html>
