--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,7 +63,8 @@ body {
 }
 
 .doggiePic {
-  border: 1px solid black;
+  margin-top: 15px;
+  border: 3px solid black;
   display: block;
   max-width: 40%;
   max-height: 300px;
@@ -147,17 +148,34 @@ body {
 
 .contentHolder {
   border: 2px solid black;
-  background-color:rgb(248, 243, 175);
-  margin: 0% 10% 10% 5%;
-  padding: 2% 7% 2% 7%;
+  background-color:rgb(255, 252, 214);
+  margin: 0% 0% 5% 0%;
+  padding: 0% 0% 0% 0%;
   display: flex;
   flex-direction: column;
   align-content: center;
   align-items: center;
   justify-content: space-between;
   box-shadow: 6px 9px 9px 2px #4b4a4a;
+  min-width: 600px;
 }
 
+.innerContainer{
+  border: 2px solid black;
+  background-color:rgb(248, 243, 175);
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: auto;
+  padding-right: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 600px;
+  min-width: 600px;
+}
 .dogHouse {
   font-size:2em;
   font-family:'Trattatello', fantasy;
@@ -166,6 +184,7 @@ body {
   background-color: rgb(255, 255, 255);
   padding: 12px;
   margin: 8% 0% 0% 0%;
+  width: 400px;
   color:rgb(47, 6, 53);
   list-style-type: none;
   display: flex;
@@ -208,6 +227,7 @@ body {
   justify-content: center;
   padding: 7px;
   box-shadow: 6px 9px 9px 2px #272626;
+  margin-bottom: 25px;
 }
 
 .removeMyDogs {
