--- a/views/dogs/info.ejs
+++ b/views/dogs/info.ejs
@@ -2,7 +2,7 @@
     <img class="doggiePic" default-src='<%= dogs.url %>' src='<%= dogs.url %>' alt="Image of <%= dogs.breeds[0].name %> found at <%= dogs.url %>">
     <div class="descriptors">
         <h4>This is the <%= dogs.breeds[0].name %></h4>
-        <h4>It is typically bred for: <%= dogs.breeds[0].bred_for ? dogs.breeds[0].bred_for : 'companionship' %></h4>
+        <h4>It is typically bred for: <%= dogs.breeds[0].bred_for ? dogs.breeds[0].bred_for : 'Companionship' %></h4>
         <h4>It has a life span of around <%= dogs.breeds[0].life_span %></h4>
         <h4>Some words to describe its temperament are: <%= dogs.breeds[0].temperament %></h4>
     </div>  
