--- a/public/css/style.css
+++ b/public/css/style.css
@@ -256,16 +256,20 @@ body {
 .alert-container {
   width: 50vw;
   margin: 0 auto;
-  margin-bottom: 3em;
+  margin-top: 1em;
+  margin-bottom: 1em;
   border-radius: 3%;
-  box-shadow: 6px 9px 9px 2px #afafaf;
+  box-shadow: 6px 9px 9px 2px #1d1d1d;
 }
 
 .alert {
   margin: .25em;
-  padding: .25em;
+  padding: .45em;
   background-color: rgba(43, 43, 43, 0.687);
   color: white;
+  text-align: center;
+  font-weight: bold;
+  font-family: 'Impact', fantasy;
 }
 
 .error {
@@ -274,8 +278,9 @@ body {
 }
 
 .success {
-  border: 3px solid forestgreen;
-  background-color: rgb(21, 85, 21);
+  border-radius: 5px;;
+  border: 3px solid rgb(0, 0, 0);
+  background-color: rgb(236, 205, 68);
 }
 
 .socialsImg {
