--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,6 +70,7 @@ body {
   max-height: 300px;
   margin-right: auto;
   margin-left: auto;
+  box-shadow: 6px 3px 6px 2px #272626a1;
 }
 
 .homepage {
@@ -247,9 +248,17 @@ body {
 
 
 .descriptors {
+  border: 1px solid black;
+  background-color: white;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  max-width: 600px;
   text-align: center;
   color:rgb(0, 0, 0);
-  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'American Typewriter', serif;
+  font-weight: bold;
+  font-size: 20px;
+  box-shadow: 6px 9px 9px 2px #272626;
 }
 
 
@@ -269,18 +278,19 @@ body {
   color: white;
   text-align: center;
   font-weight: bold;
-  font-family: 'Impact', fantasy;
 }
 
 .error {
   border: 3px solid crimson;
   background-color:rgb(148, 27, 51);
+  font-family: 'Impact', fantasy;
 }
 
 .success {
   border-radius: 5px;;
   border: 3px solid rgb(0, 0, 0);
   background-color: rgb(236, 205, 68);
+  font-family: 'Marker Felt', fantasy;
 }
 
 .socialsImg {
