--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,6 @@
   align-items: flex-end;
   box-shadow: 6px 9px 9px 2px #00000075;
   height: 70px;
-  /* align-items: center; */
 }
 
 .content {
@@ -43,21 +42,17 @@ nav ul li {
   padding: 0px;
   align-content: space-between;
   align-items:flex-end;
+  font-family: 'Comic Sans MS', 'Comic Sans', cursive;
 }
 
 .navBar {
   text-align: center;
   align-content: flex-end;
   justify-content: right;
-  margin-left: 50%;
+  margin-left: 45%;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
 }
 
-.dogLove {
-  color: rgb(59, 116, 59);
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  max-height: 10%;
-  text-align: center;
-}
 body {
   background-color: rgb(170, 120, 56);
 }
@@ -74,13 +69,14 @@ body {
 }
 
 .homepage {
-  color: rgb(143, 60, 12);
+  color: rgb(255, 255, 255);
   text-align: center;
   text-decoration: underline;
   font-size: 2.3em;
   font-family: 'Potta One', cursive;
-  background-color: rgb(255, 215, 154);
+  background-color: rgb(248, 203, 134);
   box-shadow: 6px 9px 9px 2px #272626;
+  -webkit-text-stroke: 1px black
 }
 
 .myDogsPage {
@@ -104,11 +100,11 @@ body {
 }
 
 .myDogsHead {
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   text-align: center;
   text-decoration: underline;
   font-size: 2.3em;
-  font-family: 'Chalkduster', fantasy;
+  font-family: 'Potta One', cursive;
   border: 1px solid black;
   background-color:rgba(221, 153, 63, 0.966);
   max-width: 250px;
@@ -116,6 +112,7 @@ body {
   margin-right: auto;
   min-width: 175px;
   box-shadow: 6px 9px 9px 2px #353434;
+  -webkit-text-stroke: 1px black;
 }
 
 
@@ -128,14 +125,11 @@ body {
 .searchBreedWords{
   text-align: center;
   font-family: 'Comic Sans MS', 'Comic Sans', cursive;
-  /* margin-left: 10%; */
   display: flex;
   justify-content: center;
 }
 
 .searchBox{
-  /* margin: 0px 5px;
-  margin-left: 10%; */
   display: flex;
   justify-content: center;
   border: 2px solid black;
@@ -159,6 +153,7 @@ body {
   justify-content: space-between;
   box-shadow: 6px 9px 9px 2px #4b4a4a;
   min-width: 600px;
+  min-height: 150px;
 }
 
 .innerContainer{
@@ -177,9 +172,10 @@ body {
   width: 600px;
   min-width: 600px;
 }
+
 .dogHouse {
   font-size:2em;
-  font-family:'Trattatello', fantasy;
+  font-family:'Potta One', cursive;
   text-align: center;
   border: 1px solid black;
   background-color: rgb(255, 255, 255);
@@ -192,6 +188,7 @@ body {
   justify-content: center;
   align-items: center;
   box-shadow: 6px 9px 9px 2px #272626;
+  -webkit-text-stroke: 1px black
 }
 
 .well {
@@ -202,8 +199,6 @@ body {
 }
 
 .dogLinks {
-  /* margin-left: 40%;
-  margin-right: 40%; */
   text-align: center;
   border: 1px solid black;
   background-color: rgba(224, 105, 36, 0.637);
@@ -232,9 +227,8 @@ body {
 }
 
 .removeMyDogs {
-  /* margin-left: 37.5%;
-  margin-right: 36.5%; */
   margin-top: 5%;
+  margin-bottom: 10%;
   text-align: center;
   border: 1px solid black;
   text-decoration: none;
@@ -246,6 +240,23 @@ body {
   box-shadow: 6px 9px 9px 2px #272626;
 }
 
+.noDogs{
+  font-size:2em;
+  font-family:'Potta One', cursive;
+  text-align: center;
+  border: 1px solid rgb(0, 0, 0);
+  color: rgb(245, 229, 185);
+  background-color: rgb(255, 255, 255);
+  padding: 12px;
+  margin: 8% 0% 8% 0%;
+  width: 400px;
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 6px 9px 9px 2px #272626;
+  -webkit-text-stroke: 1px black;
+}
 
 .descriptors {
   border: 1px solid black;
