made links open in new tabs instead of on the same page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -35,8 +35,8 @@
       <%- body %>
     </div>  
     <div class="footer">
-      <a class="imageLinks" href="https://www.linkedin.com/in/austin-tipograph-522209137/"><img class="socialsImg" src='/css/linkedin.png' alt="Linkedin"></a>
-      <a class="imageLinks" href="https://github.com/austintip"><img class="socialsImg" src='/css/github.png' alt="GitHub"></a>
+      <a class="imageLinks" href="https://www.linkedin.com/in/austin-tipograph-522209137/" target="_blank" rel="noopener noreferrer"><img class="socialsImg" src='/css/linkedin.png' alt="Linkedin"></a>
+      <a class="imageLinks" href="https://github.com/austintip" target="_blank" rel="noopener noreferrer"><img class="socialsImg" src='/css/github.png' alt="GitHub"></a>
     </div>
   </body>
 </html>
