--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,9 +1,9 @@
-<form action="/auth/login" method="POST">
-  <label for="auth-email">Email</label>
-  <input id="auth-email" type="email" name="email">
+<form class="authHolder"action="/auth/login" method="POST">
+  <label class="authLabel" for="auth-email">Email</label>
+  <input class="auth" id="auth-email" type="email" name="email">
 
-  <label for="auth-password">Password</label>
-  <input id="auth-password" type="password" name="password">
+  <label class="authLabel" for="auth-password">Password</label>
+  <input class="auth" id="auth-password" type="password" name="password">
 
-  <input type="submit" value="Log In">
+  <input class="submit" type="submit" value="Log In">
 </form>
