--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,12 +1,12 @@
-<form action="/auth/signup" method="POST">
-  <label for="new-email">Email</label>
-  <input id="new-email" type="email" name="email">
+<form class="authHolder" action="/auth/signup" method="POST">
+  <label class="authLabel" for="new-email">Email</label>
+  <input class="auth" id="new-email" type="email" name="email">
 
-  <label for="new-name">Name</label>
-  <input id="new-name" type="text" name="name">
+  <label class="authLabel" for="new-name">Name</label>
+  <input class="auth" id="new-name" type="text" name="name">
 
-  <label for="new-password">Password</label>
-  <input id="new-password" type="password" name="password">
+  <label class="authLabel" for="new-password">Password</label>
+  <input class="auth" id="new-password" type="password" name="password">
 
-  <input type="submit" value="Sign up">
+  <input class="submit" type="submit" value="Sign up">
 </form>
