--- a/public/css/style.css
+++ b/public/css/style.css
@@ -347,12 +347,14 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     /* margin: 2px; */
   }
 
   .navBar {
     display: flex;
     margin: 0 auto;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     /* align-items: center; */
     /* justify-content: left; */
     /* flex-direction: row; */
@@ -416,7 +418,9 @@ body {
     font-size: medium;
     margin-bottom: 1em;
     border-radius: 10%;
+    padding: 1em;
     margin: 1em;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
 
   .innerContainer {
@@ -441,5 +445,33 @@ body {
     font-size: 20px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-right: 1em;
+  }
+
+  .searchBreedWords {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+  }
+
+  .myDogsPage{
+    font-family: 'Hachi Maru Pop', cursive;
+  }
+
+
+  .noDogs{
+    font-size:1em;
+    font-family:'Potta One', cursive;
+    text-align: center;
+    border: 1px solid rgb(0, 0, 0);
+    color: rgb(245, 229, 185);
+    background-color: rgb(255, 255, 255);
+    padding: 12px;
+    margin: 0% 0% 0% 0%;
+    width: 150px;
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 6px 9px 9px 2px #272626;
+    -webkit-text-stroke: 1px black;
   }
 }
