--- a/public/css/style.css
+++ b/public/css/style.css
@@ -462,7 +462,7 @@ body {
     font-size:20px;
     font-family:'Potta One', cursive;
     text-align: center;
-    border: 1px solid rgb(0, 0, 0);
+    border: none;
     color: rgb(245, 229, 185);
     background-color: rgba(255, 255, 255, 0);
     padding: 12px;
@@ -472,8 +472,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 6px 9px 9px 2px #272626;
-    -webkit-text-stroke: 1px black;
+    box-shadow: none;
+    -webkit-text-stroke: 2px black;
   }
 
   .alert {
